--- a/desafio01/estilo.css
+++ b/desafio01/estilo.css
@@ -16,7 +16,11 @@ section {
     padding: 15px;
     width: 500px;
     margin: auto;
-    box-shadow: 3px 3px 10px rgb(0, 0, 0, 0.363);
+    box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.363);
+}
+
+section#flista {
+    width: 150px;
 }
 
 footer {
